--- a/WpfSortApplication.csproj
+++ b/WpfSortApplication.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SortAlgorithms\InsertionSort.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="SortAlgorithms\SelectionSort.cs" />
