--- a/WpfSortApplication.csproj
+++ b/WpfSortApplication.csproj
@@ -61,6 +61,7 @@
     <Compile Include="RelayCommand.cs" />
     <Compile Include="SortAlgorithms\SelectionSort.cs" />
     <Compile Include="SortAlgorithms\SortAlgorithm.cs" />
+    <Compile Include="SortAlgorithms\TreeSort.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
